--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
+    <script src="https://www.youtube.com/iframe_api"></script>
 </head>
 <body>
     <div id="search">
@@ -22,6 +23,10 @@
                 <input type="text" class="form-control" id="searchInput" name="searchInput" placeholder="Search" spellcheck="false">
             </div>
         </div>
+    </div>
+
+    <div id="iframe">
+        <div id="player"></div>
     </div>
 
     <div id="videos"></div>
